always show the scrollbar to avoid horizontal movements when changing pages

--- a/SiteSharper/Site/site.css
+++ b/SiteSharper/Site/site.css
@@ -2,6 +2,10 @@
 	generic
 */
 
+body {
+	overflow-y:scroll;
+}
+
 a
 {
 	text-decoration: none;
